src/components/landing-pages/brand/Hero/Hero.module.scss
@use "../../../../styles/scss/mixins";
@use "../../../../styles/scss/animations";

@include animations.infinite-arrow-shaft;
@include animations.infinite-arrow-tip;

.section {
  position: relative;

  header {
    padding-top: calc(110px + 96px);
    text-align: center;
    position: relative;
    z-index: -1;

    h1 {
      margin-bottom: 40px;
    }

    p {
      margin-top: 16px;
      margin-bottom: 56px;
    }

    a {
      padding: 16px !important;
      svg {
        transform: rotate(90deg);
      }

      @include mixins.lg {
        padding: 12px !important;
        span {
          display: none;
        }
      }

      :global(.arrow-shaft) {
        animation: infinite-arrow-shaft 2s infinite alternate;
      }

      :global(.arrow-tip) {
        animation: infinite-arrow-tip 2s infinite alternate;
      }
    }

    @include mixins.lg {
      padding-top: 128px;
    }
  }

  &::before {
    content: "";
    position: absolute;
    bottom: 0;
    z-index: 1;
    width: 100%;
    height: 880px;
    background: linear-gradient(180deg, rgba(1, 1, 1, 0) 0%, #010101 100%);
    pointer-events: none;

    @include mixins.lg {
      background: linear-gradient(180deg, rgba(1, 1, 1, 0) 0%, #010101 100%);
      bottom: 0;
      top: auto;
      height: 760px;
    }
  }
}

.mosaic {
  display: flex;
  position: relative;
  flex-wrap: nowrap;
  overflow: hidden;
  width: calc(100% + ((8.228%) * 2));
  left: -8.228%;
  margin-top: -214px;

  @include mixins.lg {
    width: 285.5%;
    left: -95%;
    margin-top: -48px;
  }

  & > div {
    width: calc(21.528% + 12px);
    text-align: left;
    margin: 0 12px;
    display: flex;
    flex-direction: column;
    row-gap: 24px;
    justify-content: flex-end;

    & > div {
      position: relative;
      /* outline: 1px dashed tomato; */
      background-color: rgb(var(--shadow));
      display: flex;
      align-items: center;
      overflow: hidden;

      &:not([data-no-link]) {
        cursor: pointer;
      }

      &,
      img,
      video {
        border-radius: 24px;
        @include mixins.lg {
          border-radius: 12px;
        }
      }

      video {
        position: relative;
        width: 100%;
        height: 100%;
        object-fit: cover;
      }
    }

    &:nth-child(1) {
      margin-bottom: 65px;
      @include mixins.lg {
        margin-bottom: 0;
      }
    }

    &:nth-child(2) {
      margin-bottom: 120px;

      video {
        height: 102%;
      }
    }

    &:nth-child(3) {
    }

    &:nth-child(4) {
      margin-bottom: 90px;

      video {
        height: 145%;
      }

      @include mixins.lg {
        margin-bottom: 56px;
      }
    }

    &:nth-child(5) {
      margin-bottom: 270px;

      & > div:last-child {
        display: flex;
        align-items: center;
        justify-content: center;
        padding: 72px;
      }

      @include mixins.lg {
        margin-bottom: 0;
      }
    }

    @include mixins.lg {
      width: calc(50% + 12px);
    }
  }
}

.lg {
  height: 480px;
  @include mixins.md {
    height: 295px;
  }
}

.md {
  height: 400px;
  @include mixins.md {
    height: 245px;
  }
}

.sm {
  height: 320px;
  @include mixins.md {
    height: 195px;
  }
}

